@@ -1585,7 +1585,7 @@ rsvg_property_bag_free (RsvgPropertyBag *bag)
 	g_free (bag);
 }
 
-const char *
+G_CONST_RETURN char *
 rsvg_property_bag_lookup (RsvgPropertyBag *bag, const char * key)
 {
 	return (const char *)g_hash_table_lookup (bag->props, (gconstpointer)key);
